# Lasso

./: .coverage  .gitignore  LICENSE  NOTICE  README.md  benchmark-issues.md  citation.md  poster.aux  poster.fdb_latexmk  poster.fls  poster.tex  poster.xdv  pyproject.toml  requirements.txt
beta-lactamase-bench/: README.md
beta-lactamase-bench/data/: ambler_class_a_beta_lactamases.faa  ambler_class_a_beta_lactamases.tsv  ambler_class_a_table.tsv
beta-lactamase-bench/scripts/: add_locus_to_fasta_headers.py  (+3 more)
lasso_workbench/: AGENTS.md  __init__.py  __main__.py  app.py
poster_assets/: altframe_scatter_all.tsv  altframe_scatter_sig.tsv
results/: newlassos_rule_scores.tsv
scripts/: add_validated_precursors.py  alt_frame_conservation.py  altframe_constraint_conservation.py  antismash_api_search.py  benchmark_core_prediction_lab_dataset.py  benchmark_pipeline_validation.py  build_lasso_orf_db.py  fetch_antismash_gbks.py  generate_precursor_dataset_multi.py  join_altframe_esm.py  score_altframe_embeddings.py  score_newlassos.py
specs/: benchmark.spec.md  sequence_analysis.spec.md  services.spec.md
tests/: __init__.py  test_consolidation.py  test_coordinate_system.py  test_dataset.py  test_edge_cases.py  test_embedding_scoring_grouping.py  test_esm_embedder_pooling.py  test_esm_padding.py  test_pipeline_dataframe_and_ids.py  test_pipeline_embedder.py  test_pipeline_progress.py  test_pipeline_smoke.py  test_prediction.py  test_prediction_rules.py  test_prediction_slicing.py  test_ranking.py  test_scientific_features.py  test_services.py  test_ui_integration.py
(+103 files in other folders)
