[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lasso-workbench"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lasso-workbench = "lasso_workbench.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.hmm", "*.html", "*.qss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=lasso_workbench --cov-report=term-missing"
