[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lasso-workbench"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "biopython>=1.81",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "gradio>=4.0",
    "torch>=2.1",
    "transformers>=4.38",
    "huggingface_hub>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
lasso-workbench = "lasso_workbench.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.hmm", "*.html", "*.qss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
